Visualisation settings reset view and superelevation

--- a/ch03-funcindex.tex
+++ b/ch03-funcindex.tex
@@ -68,6 +68,10 @@ You can change some properties of the render window by clicking \cmd{Settings\ra
 
 For any rendered scene a light source has to be specified (basically the equivalent to the sun or a lamp in the room). Per default this light source is identical with the viewer, i.e. the light source always illuminated the part of an object in the render window that can be seen by the user. In some cases this illumination is not enough, though, and certain parts of a rendered object may be shrouded in darkness. Therefore it is possible to switch on additional light sources above and below the object to ensure a full illumination of the scene.
 
+A global superelevation factor can be applied to all root objects in the visualisation pipeline. This overwrites all previously set superelevation factors.
+
+Per default on loading new data the 3D view is adapted to show the entire scene. This can be switched of (e.g. useful for making a series of screenshots).
+
 \section{General Visualisation Options}
 \label{genvisoptions}
 
