--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -16,6 +16,7 @@
 \newcommand{\cmd}[1]{\texttt{#1}}
 \newcommand{\ogs}{OpenGeoSys }
 \newcommand{\bstart}[1]{\noindent\textbf{#1} }
+\newcommand{\degree}{\ensuremath{^\circ}}
 
 
 % ----------------------------------------------------------
@@ -90,7 +91,7 @@
 \begin{tabbing}
 
 \hspace*{14cm}\=aa\kill
-\noindent This manual has been compiled based \> \\on the \ogs Data Explore 5.1 \> \\(released on 03 March 2011). \> \\
+\noindent This manual has been compiled based \> \\on the \ogs Data Explore 5.1.02 \> \\(released on 19 April 2011). \> \\
 \> \\
 \noindent Many thanks to Lars Bilke and Thomas \> \\ Fischer and everyone else helping with \> \\ the development of the software. \> \\
 \end{tabbing}
@@ -108,6 +109,11 @@
 \include{ch02-workflow}
 
 \include{ch03-funcindex}
+
+\include{ch04-visualisation}
+
+\appendix
+\include{app-literature}
 
 \cleardoublepage
 
