--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -91,7 +91,7 @@
 \begin{tabbing}
 
 \hspace*{14cm}\=aa\kill
-\noindent This manual has been compiled based \> \\on the \ogs Data Explore 5.1.02 \> \\(released on 19 April 2011). \> \\
+\noindent This manual has been compiled based \> \\on the \ogs Data Explorer 5.1.02 \> \\(released on 19 April 2011). \> \\
 \> \\
 \noindent Many thanks to Lars Bilke and Thomas \> \\ Fischer and everyone else helping with \> \\ the development of the software. \> \\
 \end{tabbing}
